--- a/package/section2.html
+++ b/package/section2.html
@@ -1,11 +1,11 @@
-<section id="section_2">
+<article id="section_2">
     <header>
         <nav class="left">
             <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
         </nav>
         <h1>TaKo2!!</h1>
     </header>
-    <article id="main2">
+    <section id="main2">
         <p>SECTION 2</p>
-    </article>
-</section>
+    </section>
+</article>
