More fixings for android keyboard and IOS

--- a/package/index.html
+++ b/package/index.html
@@ -142,7 +142,7 @@
                     <label for="border">Textarea</label>
                     <textarea placeholder="The textarea can have the input texts' styles"></textarea>
                 </fieldset>
-                <br>
+                <!-- <br>
                 <fieldset>
                     <legend>Checkboxes & Radiobuttons</legend>
                     <label for="square">Square</label>
@@ -178,7 +178,7 @@
                     <label for="range">Range</label>
                     <input type="range" id="range">
                 </fieldset>
-            </form>
+            </form> -->
         </section>
         <section id="lists" class="indented">
             <ul>
