--- a/package/index.html
+++ b/package/index.html
@@ -277,8 +277,10 @@
             Tako.Notification.confirm("help-circled", "Question", "Do you like TaKos", "Of course", "Not much", function(result){
                 if(result){
                     alert("I know you like them!!");
+                    console.log("I know you like them!!");
                 }else{
                     alert("Well, I hope at least you like our TaKo");
+                    console.log("Well, I hope at least you like our TaKo");
                 }
             })
         });
