--- a/package/index.html
+++ b/package/index.html
@@ -262,11 +262,12 @@
                     alert("Refresh finished");
                     puller.hide()}, 3000);
             }});
-            // Tako.Article("notifications");
-            // Tako.Article("buttons");
+            // Tako.Section("notifications");
+            // Tako.Section("buttons");
+            Tako.Section("colors");
         });
 
-        Tako.init({"sections": ["section2.html"]});
+        Tako.init({"articles": ["article2.html"]});
         $("#show_success").bind("tap", function(){
             Tako.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
         });
