Added fixing on setting up navigators to initial section

--- a/package/index.html
+++ b/package/index.html
@@ -264,7 +264,7 @@
             }});
             // Tako.Section("notifications");
             // Tako.Section("buttons");
-            Tako.Section("colors");
+            // Tako.Section("colors");
         });
 
         Tako.init({"articles": ["article2.html"]});
