--- a/package/index.html
+++ b/package/index.html
@@ -25,9 +25,9 @@
         <ul>
             <li class="icon box" data-section="forms">Forms <span class="counter">125</span></li>
             <li class="icon box" data-section="lists">Lists</li>
-            <li data-section="buttons"><img class="small" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Buttons</span></li>
-            <li data-section="layouts"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Layouts</span></li>
-            <li data-section="notifications"><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Notifications</span></li>
+            <li data-section="buttons"><img class="small" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Buttons</span></li>
+            <li data-section="layouts"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Layouts</span></li>
+            <li data-section="notifications"><img class="big" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Notifications</span></li>
             <li class="" data-section="colors">Colors</li>
         </ul>
     </aside>
@@ -38,7 +38,7 @@
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
-                <button  class="button" data-action="aside" data-visible="colors"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button  class="button" data-action="aside" data-visible="colors"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
             </nav>
             <h1>TaKo!!</h1>
         </header>
@@ -104,27 +104,27 @@
             </p>
 
             <p>
-                <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button class="button smallest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
 
-                <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button class="button small"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
 
-                <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button class="button"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
 
-                <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button class="button big"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
 
-                <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button class="button biggest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
             </p>
 
             <p>
-                <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                <button class="button smallest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                <button class="button small"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                <button class="button"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                <button class="button big"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                <button class="button biggest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
             </p>
         </section>
         <section id="forms" class="indented">
@@ -183,9 +183,9 @@
         <section id="lists" class="indented">
             <ul>
                 <li class="icon box"><strong>Elem 1</strong><small>small elem</small></li>
-                <li><img class="small" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
-                <li><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
-                <li><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                <li><img class="small" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                <li><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                <li><img class="big" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                 <li><strong>Elem 1</strong><small>small elem</small></li>
                 <li><strong>Elem 1</strong><small>small elem</small></li>
                 <li><strong>Elem 2</strong></li>
@@ -244,12 +244,12 @@
             <p class="align-center brown" style="padding: 10px">brown</p>
             <p class="align-center orange" style="padding: 10px">orange</p>
         </section>
-        <!-- <footer>
+        <footer>
             <nav>
-                <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
-                <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
+                <button class="icon ok" id="show_success2">Success<span class="counter">5</span></button>
+                <button id="show_progress2">Progress<span class="counter">84</span></button>
             </nav>
-        </footer> -->
+        </footer>
     </article>
 
     <script src="js/tako.components.js"></script>
@@ -286,7 +286,8 @@
             })
         });
         $("#show_custom").bind("tap", function(){
-            Tako.Notification.custom("Custom", "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempus auctor convallis. Aliquam eget ipsum a velit pulvinar elementum vitae non dolor. Nullam dui metus, tincidunt non dolor eu, laoreet auctor tellus. Suspendisse vestibulum scelerisque nibh non scelerisque. Cras eget lobortis orci. Vestibulum ultrices enim mattis fermentum tristique. Nunc ultricies feugiat tellus, ut facilisis est dignissim nec. Vivamus molestie sem vel euismod vestibulum.", true, "", null, function(){console.log("Fin de custom")});});
+            Tako.Notification.custom("Custom", "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempus auctor convallis. Aliquam eget ipsum a velit pulvinar elementum vitae non dolor. Nullam dui metus, tincidunt non dolor eu, laoreet auctor tellus. Suspendisse vestibulum scelerisque nibh non scelerisque. Cras eget lobortis orci. Vestibulum ultrices enim mattis fermentum tristique. Nunc ultricies feugiat tellus, ut facilisis est dignissim nec. Vivamus molestie sem vel euismod vestibulum.", true, "", null, function(){console.log("Fin de custom")});
+        });
         $("#show_loading").bind("tap", function(){
             Tako.Notification.loading("Loading", 5, function(){console.log("LOADING CB");})
         });
