--- a/package/index.html
+++ b/package/index.html
@@ -49,6 +49,7 @@
         </nav>
         <section id="main">
             <p>This is an example of pull and refresh</p>
+            <div>ss</div>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
         </section>
