Fixed asynchrnous article listener bug

--- a/package/index.html
+++ b/package/index.html
@@ -29,10 +29,11 @@
             <li data-section="layouts"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Layouts</span></li>
             <li data-section="notifications"><img class="big" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Notifications</span></li>
             <li class="" data-section="colors">Colors</li>
+            <li class="" data-article="article_2">Asynchronous Article</li>
         </ul>
     </aside>
 
-    <article id="section_1">
+    <article id="article_1">
         <header>
             <nav class="left">
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
