--- a/package/article2.html
+++ b/package/article2.html
@@ -1,4 +1,4 @@
-<article id="section_2">
+<article id="article_2">
     <header>
         <nav class="left">
             <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
@@ -6,6 +6,7 @@
         <h1>TaKo2!!</h1>
     </header>
     <section id="main2">
-        <p>SECTION 2</p>
+        <p>Article 2</p>
+        <button class="" data-article="article_1">Article 1</button>
     </section>
 </article>
