--- a/package/index.html
+++ b/package/index.html
@@ -48,12 +48,13 @@
             <button data-section="buttons" class="icon tasks">Buttons</button>
             <button data-section="lists" class="icon list">Lists</button>
         </nav>
-        <!-- <footer>
+        <footer>
             <nav>
+                <input type="text">
                 <button class="icon ok" id="show_success2">Success<span class="counter">5</span></button>
                 <button id="show_progress2">Progress<span class="counter">84</span></button>
             </nav>
-        </footer> -->
+        </footer>
         <section id="main">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
