Inputs for android 2.3 improvements

--- a/package/index.html
+++ b/package/index.html
@@ -145,14 +145,14 @@
                 <fieldset>
                     <legend>Text</legend>
                     <label for="input">Default</label>
-                    <input type="text" id="input">
+                    <label class="input" for="input"><input type="text" id="input"></label>
                     <label for="line">Line</label>
-                    <input type="text" id="line" class="line">
+                    <label class="input" for="line"><input type="text" id="line" class="line"></label>
                     <label for="background">No back</label>
-                    <input type="text" id="background" class="no_background">
+                    <label class="input" for="background"><input type="text" id="background" class="no_background"></label>
                     <label for="border">No border</label>
-                    <input type="text" id="border" class="no_border">
-                    <label for="border">Textarea</label>
+                    <label class="input" for="border"><input type="text" id="border" class="no_border"></label>
+                    <label for="">Textarea</label>
                     <textarea placeholder="The textarea can have the input texts' styles"></textarea>
                     <label for="input">Default</label>
                     <input type="text" id="input">
@@ -315,6 +315,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <!-- <script src="http://192.168.2.100:8080/target/target-script-min.js"></script> -->
+    <script src="http://192.168.2.110:8080/target/target-script-min.js"></script>
 </body>
 </html>
