--- a/package/index.html
+++ b/package/index.html
@@ -315,6 +315,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <script src="http://192.168.2.110:8080/target/target-script-min.js"></script>
+    <!-- <script src="http://192.168.2.143:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
