Added wp fallback and visualizations

--- a/package/index.html
+++ b/package/index.html
@@ -61,9 +61,11 @@
             <p data-os="android">This is only seen in android</p>
             <p data-os="ios">This is only seen in ios</p>
             <p data-os="firefoxos">This is only seen in firefoxos</p>
+            <p data-os="wp">This is only seen in windows phone</p>
             <p data-browser="chrome">This is only seen in chrome</p>
             <p data-browser="safari">This is only seen in safari</p>
             <p data-browser="firefox">This is only seen in firefox</p>
+            <p data-browser="ie">This is only seen in Internet Explorer</p>
         </section>
         <section id="buttons" class="indented">
             <p>
