Fixings for aside in windows phone

--- a/package/index.html
+++ b/package/index.html
@@ -12,6 +12,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+
     <link rel="stylesheet" href="stylesheets/tako.css">
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
 </head>
@@ -317,6 +319,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <!-- <script src="http://192.168.2.143:8080/target/target-script-min.js"></script> -->
+    <script src="http://192.168.2.143:8080/target/target-script-min.js"></script>
 </body>
 </html>
