Added article animations

--- a/package/index.html
+++ b/package/index.html
@@ -35,7 +35,7 @@
         </ul>
     </aside>
 
-    <article id="article_1">
+    <article id="article_1" data-animation="fade">
         <header>
             <nav class="left">
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
