Improved animation compability

--- a/package/article2.html
+++ b/package/article2.html
@@ -1,4 +1,4 @@
-<article id="article_2" data-animation="cube">
+<article id="article_2" data-animation="room">
     <header>
         <nav class="left">
             <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
