Added section animations

--- a/package/index.html
+++ b/package/index.html
@@ -35,7 +35,7 @@
         </ul>
     </aside>
 
-    <article id="article_1" data-animation="room">
+    <article id="article_1" data-animation="cover">
         <header>
             <nav class="left">
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
@@ -57,7 +57,7 @@
             <button data-section="lists" class="icon list">Lists</button>
           </nav>
         </footer>
-        <section id="main">
+        <section id="main" data-animation="cover">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
@@ -70,7 +70,7 @@
             <p data-browser="firefox">This is only seen in firefox</p>
             <p data-browser="ie">This is only seen in Internet Explorer</p>
         </section>
-        <section id="buttons" class="indented">
+        <section id="buttons" class="indented" data-animation="cover">
             <p>
                 <button class="wide">Wide</button>
                 <button class="wide accept">Accept</button>
@@ -145,7 +145,7 @@
                 <button class="button biggest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
             </p>
         </section>
-        <section id="forms" class="indented">
+        <section id="forms" class="indented" data-animation="cover">
             <form>
                 <fieldset>
                     <legend>Text</legend>
