Improved indented section

--- a/package/index.html
+++ b/package/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="HandheldFriendly" content="True">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <meta http-equiv="x-ua-compatible" content="IE=edge" />
@@ -320,6 +321,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <script src="http://192.168.2.143:8080/target/target-script-min.js"></script>
+    <!-- <script src="http://192.168.2.143:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
