--- a/package/index.html
+++ b/package/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
 </head>
 
-<body>
+<body class="noflat">
     <aside class="full">
     <!-- <aside> -->
         <header>
@@ -71,7 +71,7 @@
             <p data-browser="firefox">This is only seen in firefox</p>
             <p data-browser="ie">This is only seen in Internet Explorer</p>
         </section>
-        <section id="buttons" class="indented" data-animation="slide">
+        <section id="buttons" class="indented" data-animation="slide" data-scrolltop>
             <p>
                 <button class="wide">Wide</button>
                 <button class="wide accept">Accept</button>
