Fixed flat confirm notification

--- a/package/index.html
+++ b/package/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
 </head>
 
-<body class="noflat">
+<body class="">
     <aside class="full">
     <!-- <aside> -->
         <header>
