Lists with right arrow

--- a/package/index.html
+++ b/package/index.html
@@ -211,9 +211,9 @@
         </section>
         <section id="lists" class="indented">
             <ul>
-                <li class="icon box"><strong>Elem 1</strong><small>small elem</small></li>
-                <li><img class="small" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
-                <li><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                <li class="icon box arrow"><strong>Elem 1</strong><small>small elem</small></li>
+                <li class="arrow strong"><img class="small" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
+                <li class="arrow circled"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                 <li><img class="big" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><strong>Elem 1</strong><small>small elem</small></li>
                 <li><strong>Elem 1</strong><small>small elem</small></li>
                 <li><strong>Elem 1</strong><small>small elem</small></li>
