Indented section > div: height 100%

--- a/package/index.html
+++ b/package/index.html
@@ -58,7 +58,7 @@
             <button data-section="lists" class="icon list">Lists</button>
           </nav>
         </footer>
-        <section id="main" data-animation="slide">
+        <section id="main" class="indented" data-animation="slide">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
