--- a/package/index.html
+++ b/package/index.html
@@ -284,14 +284,18 @@
                     alert("Refresh finished");
                     puller.hide()}, 3000);
             }});
+            $("#forms").on("load", function(){console.log("FORMS LOADED")});
+            $("#buttons").on("load", function(){console.log("BUTTONS LOADED")});
+            $("#forms").on("unload", function(){console.log("FORMS UNLOADED")});
             // Tako.Section("notifications");
             // Tako.Section("buttons");
             // Tako.Section("colors");
         });
 
         Tako.init({
-            articles: ["article2.html"],
-            logging : Tako.logging.LOG
+            articles     : ["article2.html"],
+            logging      : Tako.logging.LOG,
+            urlNavigation: true
         });
         $("#show_success").bind("tap", function(){
             Tako.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
