--- a/package/index.html
+++ b/package/index.html
@@ -274,7 +274,6 @@
             <p class="align-center orange" style="padding: 10px">orange</p>
         </section>
     </article>
-    <script src="http://192.168.2.143:8080/target/target-script-min.js"></script>
     <script src="js/tako.components.js"></script>
     <script src="js/tako.debug.js"></script>
     <script>
@@ -330,5 +329,6 @@
             console.log.apply(console, arguments)
         };
     </script>
+    <!-- <script src="http://192.168.2.110:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
