Fixed theme, added centered, and fixed aside

--- a/package/index.html
+++ b/package/index.html
@@ -28,6 +28,7 @@
         <ul>
             <li class="icon box" data-section="forms">Forms <span class="counter">125</span></li>
             <li class="icon box" data-section="lists">Lists</li>
+            <li class="icon resize-full-alt" data-section="centered">Centered</li>
             <li data-section="buttons"><img class="small" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Buttons</span></li>
             <li data-section="layouts"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Layouts</span></li>
             <li data-section="notifications"><img class="big" src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Notifications</span></li>
@@ -70,6 +71,20 @@
             <p data-browser="safari">This is only seen in safari</p>
             <p data-browser="firefox">This is only seen in firefox</p>
             <p data-browser="ie">This is only seen in Internet Explorer</p>
+        </section>
+        <section id="centered" class="centered" data-animation="slide">
+            <div>
+                <p>This is an example of centered screen</p>
+                <div class="form">
+                    <fieldset>
+                        <label class="input" for="nickname">Nick:</label>
+                        <input type="text" id="nickname" class="line">
+                        <label class="input" for="password">Pass:</label>
+                        <input type="password" id="password" class="line">
+                        <button>Login</button>
+                    </fieldset>
+                </div>
+            </div>
         </section>
         <section id="buttons" class="indented" data-animation="slide" data-scrolltop>
             <p>
