Noflat styled elements

--- a/package/index.html
+++ b/package/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
 </head>
 
-<body class="">
+<body class="noflat">
     <aside class="full">
     <!-- <aside> -->
         <header>
@@ -40,7 +40,7 @@
     <article id="article_1" data-animation="slide">
         <header>
             <nav class="left">
-                <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
+                <button class="button icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
                 <button  class="button" data-action="aside" data-visible="colors"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
