--- a/package/index.html
+++ b/package/index.html
@@ -37,7 +37,7 @@
         </ul>
     </aside>
 
-    <article id="article_1" data-animation="slide">
+    <article id="article_1" data-animation="slide" class="active">
         <header>
             <nav class="left">
                 <button class="button icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
@@ -59,7 +59,7 @@
             <button data-section="lists" class="icon list">Lists</button>
           </nav>
         </footer>
-        <section id="main" class="indented" data-animation="slide">
+        <section id="main" class=" active" data-animation="slide">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
@@ -71,6 +71,10 @@
             <p data-browser="safari">This is only seen in safari</p>
             <p data-browser="firefox">This is only seen in firefox</p>
             <p data-browser="ie">This is only seen in Internet Explorer</p>
+            <button data-section="layouts"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Layouts</span></button>
+            <button data-section="layouts">Layouts</button>
+            <button data-section="lists" class="icon list">Lists</button>
+            <button>NAda</button>
         </section>
         <section id="centered" class="centered" data-animation="slide">
             <div>
@@ -81,7 +85,7 @@
                         <input type="text" id="nickname" class="line">
                         <label class="input" for="password">Pass:</label>
                         <input type="password" id="password" class="line">
-                        <button>Login</button>
+                        <button class="wide">Login</button>
                     </fieldset>
                 </div>
             </div>
@@ -293,6 +297,7 @@
     <script src="js/tako.debug.js"></script>
     <script>
         Tako.onReady(function(){
+            console.log("READY");
             window.puller = Tako.Pull_Refresh("main", {onRefresh:function(){
                 setTimeout(function(){
                     alert("Refresh finished");
@@ -309,7 +314,7 @@
         Tako.init({
             articles     : ["article2.html"],
             logging      : Tako.logging.LOG,
-            urlNavigation: true
+            urlNavigation: false
         });
         $("#show_success").bind("tap", function(){
             Tako.Notification.success("ok", "Success!!","Everything worked fine", null, function(){console.log("SUCCESS CB");})
