--- a/package/index.html
+++ b/package/index.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="stylesheets/tako.css">
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
+    <link rel="stylesheet" href="stylesheets/tako.android.css">
 </head>
 
 <body class="noflat">
