--- a/package/index.html
+++ b/package/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="stylesheets/tako.css">
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
     <link rel="stylesheet" href="stylesheets/tako.android.css">
+    <link rel="stylesheet" href="stylesheets/tako.ios.css">
 </head>
 
 <body class="noflat">
@@ -37,7 +38,7 @@
         </ul>
     </aside>
 
-    <article id="article_1" data-animation="slide" class="active">
+    <article id="article_1" data-animation="slide" class="">
         <header>
             <nav class="left">
                 <button class="button icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
@@ -59,7 +60,7 @@
             <button data-section="lists" class="icon list">Lists</button>
           </nav>
         </footer>
-        <section id="main" class=" active" data-animation="slide">
+        <section id="main" class="" data-animation="slide">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
