Added wp styles first commit

--- a/package/index.html
+++ b/package/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="stylesheets/tako.theme.css">
     <link rel="stylesheet" href="stylesheets/tako.android.css">
     <link rel="stylesheet" href="stylesheets/tako.ios.css">
+    <link rel="stylesheet" href="stylesheets/tako.wp.css">
 </head>
 
 <body class="noflat">
