--- a/package/index.html
+++ b/package/index.html
@@ -62,6 +62,7 @@
           </nav>
         </footer>
         <section id="main" class="" data-animation="slide">
+            <button onclick="alert('HOLA')">HOLA</button>
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
             <p data-device="tablet">This is only seen in tablet mode</p>
