Firefoxos first commit

--- a/package/index.html
+++ b/package/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="stylesheets/tako.android.css">
     <link rel="stylesheet" href="stylesheets/tako.ios.css">
     <link rel="stylesheet" href="stylesheets/tako.wp.css">
+    <link rel="stylesheet" href="stylesheets/tako.firefoxos.css">
 </head>
 
 <body class="noflat">
