Fixings on wp and iscroll

--- a/package/index.html
+++ b/package/index.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section id="buttons" class="indented" data-animation="slide" data-scrolltop>
+        <section id="buttons" class="indented iscroll" data-animation="slide" data-scrolltop>
             <p>
                 <button class="wide">Wide</button>
                 <button class="wide accept">Accept</button>
