Changed colors, fixed hashnavigation

--- a/package/index.html
+++ b/package/index.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section id="buttons" class="indented iscroll" data-animation="slide" data-scrolltop>
+        <section id="buttons" class="indented" data-animation="slide" data-scrolltop>
             <p>
                 <button class="wide">Wide</button>
                 <button class="wide accept">Accept</button>
@@ -105,27 +105,27 @@
             </p>
 
             <p>
-                <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
+                <button class="smallest"><span class="icon spin1 animated"></span><span>Smallest</span></button>
 
-                <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
+                <button class="small"><span class="icon spin2 animated"></span><span>Small</span></button>
 
-                <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
+                <button class=""><span class="icon spin3 animated"></span><span>Normal</span></button>
 
-                <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
+                <button class="big"><span class="icon spin4 animated"></span><span>Big</span></button>
 
-                <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
+                <button class="biggest"><span class="icon spin5 animated"></span><span>Biggest</span></button>
             </p>
 
             <p>
-                <button class="smallest icon ok">Hola</button>
+                <button class="smallest icon ok">Smallest</button>
 
-                <button class="small icon ok">Hola</button>
+                <button class="small icon ok">Small</button>
 
-                <button class="icon ok">Hola</button>
+                <button class="icon ok">Normal</button>
 
-                <button class="big icon ok">Hola</button>
+                <button class="big icon ok">Big</button>
 
-                <button class="biggest icon ok">Hola</button>
+                <button class="biggest icon ok">Biggest</button>
             </p>
 
             <p>
@@ -141,27 +141,27 @@
             </p>
 
             <p>
-                <button class="button smallest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
+                <button class="button smallest" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Smallest</span></button>
 
-                <button class="button small"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
+                <button class="button small" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Small</span></button>
 
-                <button class="button"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
+                <button class="button" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Normal</span></button>
 
-                <button class="button big"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
+                <button class="button big" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Big</span></button>
 
-                <button class="button biggest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Aside</span></button>
+                <button class="button biggest" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""><span>Biggest</span></button>
             </p>
 
             <p>
-                <button class="button smallest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
+                <button class="button smallest" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button small"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
+                <button class="button small" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
+                <button class="button" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button big"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
+                <button class="button big" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
 
-                <button class="button biggest"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
+                <button class="button biggest" style="background-color:black;background-image:none;"><img src="http://www.takojs.com/assets/img/tako-logo.png" alt=""></button>
             </p>
         </section>
         <section id="forms" class="indented" data-animation="slide">
